camouflage complet du bouton responsive de la navbar pour les liens en version tablette  (ne se faisait pas correctement avant)

--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,9 @@ header {
   background-color: #fff;
   border-bottom: 1px solid rgb(51, 51, 51);
 }
+header button {
+  display: none;
+}
 @media screen and (max-width: 900px) {
   header {
     width: 100%;
